# PyCirce

./: README.MD  pyproject.toml  setup.py
examples/: becker_design.csv  becker_experiments.csv  blasius.py  blasius_noisy.py  blasius_results.py  dittus_boelter.py  dittus_boelter_noisy.py  toy_case.py  toy_case_loglik.py
pycirce/: CirceECME.py  CirceECMEdiag.py  CirceEM.py  CirceEMdiag.py  NoisyCirceDiag.py  __init__.py  circeECME.py  circeEM.py
src/pycirce/: CirceECME.py  CirceECMERidge.py  CirceECMEdiag.py  CirceEM.py  CirceEMdiag.py  CirceREML.py  NoisyCirceDiag.py  __init__.py  verify_reml.py
